[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# These are the pytest config options
markers= [
    "slow: marks tests as slow (deselect with `pytest -m 'not slow'`).",
    "fast: mark tests as fast.",
]