[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = desc/_version.py
versionfile_build = desc/_version.py
tag_prefix = v
parentdir_prefix = desc-


[coverage:run]
# Settings to control coverage.py or pytest with coverage flags: "--cov" (requires pytest-cov)
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source =
       desc/

# _version.py is generated code, no need to count it
omit =
     desc/_version.py


[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:

ignore_errors = True


[tool:pytest]
markers=
	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
	fast: mark tests as fast.

[flake8]
# Primarily ignoring whitespace, indentation, and commenting ettiquette that black does not catch
# These will be fixed in a code-cleaning branch in the future
ignore = E1, E2, E5, E741, W1, W2, W3, W5
max-line-length = 88
exclude = docs/*, examples/*, devtools/*
max-complexity = 10
