[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = desc/_version.py
versionfile_build = desc/_version.py
tag_prefix = v
parentdir_prefix = desc-


[coverage:run]
# Settings to control coverage.py or pytest with coverage flags: "--cov" (requires pytest-cov)
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source =
       desc/

# _version.py is generated code, no need to count it
omit =
     desc/_version.py


[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:

ignore_errors = True


[tool:pytest]
markers=
	unit: marks small unit tests
	regression: marks end to end regression tests
	solve: marks tests that rely solving an equilibrium
	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
	fast: mark tests as fast.

[flake8]
# Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
# These will be fixed in a code-cleaning branch in the future
ignore = E1, E2, E704, W503, W504, W505, D105, D107, D401, E731, E741
per-file-ignores =
     desc/compute/__init__.py: F401
     desc/compute/data_index.py: E501
     desc/geometry/__init__.py: F401
     desc/io/__init__.py: F401
     desc/objectives/__init__.py: F401
     desc/optimize/__init__.py: F401     
max-line-length = 88
exclude = docs/*, examples/*, devtools/*
max-complexity = 15
